--- a/Management/users/templates/users/logout.html
+++ b/Management/users/templates/users/logout.html
@@ -1,8 +1,9 @@
 {% extends 'users/base2.html' %}  
 {% block content %}  
    <h2>You have been logged out</h2>
-    <div>
-        if you want login again <a  href="{% url 'login' %}">Log In Again</a>
-
+   <div class="border-top pt-3">
+     <small class="text-muted">
+     If you want login again  <a class="ml-2"   href="{% url 'login' %}">Log In Again</a>
+     </small>
     </div>
    {% endblock content %}
