--- a/Management/webpages/templates/pages/about.html
+++ b/Management/webpages/templates/pages/about.html
@@ -1,11 +1,12 @@
 {% extends 'pages/base.html'%}
+{% load static %}
 {% block content %}
 <section class="about">
 
-    <h1 class="heading"> <span>about</span> us </h1>
+    <h1 class="heading"> <span>About</span> Us </h1>
     <div class="row">
         <div class="image">
-            <img src="images/aboutus.png" alt="">
+            <img src="{% static 'media/images/aboutus.png' %}" alt="">
         </div>
         <div class="content">
             <h3>take the world's best quality treatment</h3>
