--- a/Management/webpages/templates/pages/services.html
+++ b/Management/webpages/templates/pages/services.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- services section starts -->
 <section class="services">
-    <h1 class="heading"> our <span>services</span> </h1>
+    <h1 class="heading"> Our <span>Services</span> </h1>
     <div class="box-container">
         <div class="box">
             <i class='fas fa-notes-medical'></i>
@@ -54,32 +54,83 @@
         </div>
     </div>
 </section>
-
+<script>
+  function show1() {
+   document.getElementById('content1').style.height="400px";
+   document.getElementById('content1').style.display="block";
+   document.getElementById('show1').style.display="none";}
+   function hide1() {
+   document.getElementById('content1').style.height="0px";
+   document.getElementById('content1').style.display="none";
+   document.getElementById('show1').style.display="none";
+ }
+ function show2() {
+   document.getElementById('content2').style.height="400px";
+   document.getElementById('content2').style.display="block";
+   document.getElementById('show2').style.display="none";}
+   function hide2() {
+   document.getElementById('content2').style.height="0px";
+   document.getElementById('content2').style.display="none";
+   document.getElementById('show2').style.display="inline";
+ }
+ function show3() {
+   document.getElementById('content3').style.height="400px";
+   document.getElementById('content3').style.display="block";
+   document.getElementById('show3').style.display="none";}
+   function hide3() {
+   document.getElementById('content3').style.height="0px";
+   document.getElementById('content3').style.display="none";
+   document.getElementById('show3').style.display="inline";
+ }function show4() {
+   document.getElementById('content4').style.height="400px";
+   document.getElementById('content4').style.display="block";
+   document.getElementById('show4').style.display="none";}
+   function hide4() {
+   document.getElementById('content4').style.height="0px";
+   document.getElementById('content4').style.display="none";
+   document.getElementById('show4').style.display="inline";
+ }function show5() {
+   document.getElementById('content5').style.height="400px";
+   document.getElementById('content5').style.display="block";
+   document.getElementById('show5').style.display="none";}
+   function hide5() {
+   document.getElementById('content5').style.height="0px";
+   document.getElementById('content5').style.display="none";
+   document.getElementById('show5').style.display="inline";
+ }function show6() {
+   document.getElementById('content6').style.height="400px";
+   document.getElementById('content6').style.display="block";
+   document.getElementById('show6').style.display="none";}
+   function hide6() {
+   document.getElementById('content6').style.height="0px";
+   document.getElementById('content6').style.display="none";
+   document.getElementById('show6').style.display="inline";
+ }</script>
 <!-- services section ends -->
-<div >       
+<div class="ser" >       
         <!-- Trigger/Open The Modal -->
-        <button class="myBtn_multi">Cardilogist <i class="fas fa-heartbeat"></i></button>
+        <button class="myBtn_multi" id="show" onclick="show1()" >Cardilogist <i class="fas fa-heartbeat"></i></button>
 
           <!-- Trigger/Open The Modal -->
-          <button class="myBtn_multi" >Gastroenterology</button>
+          <button class="myBtn_multi" id="show" onclick="show2()" >Gastroenterology</button>
 
            <!-- Trigger/Open The Modal -->
-           <button class="myBtn_multi" >Nephrology</button>
+           <button class="myBtn_multi" id="show" onclick="show3()" >Nephrology</button>
 
            <!-- Trigger/Open The Modal -->
-         <button class="myBtn_multi" >Psychiatry</button>
-
+         <button class="myBtn_multi" id="show" onclick="show4()">Psychiatry</button>
+         
            <!-- Trigger/Open The Modal -->
-        <button class="myBtn_multi" >Pulmonology<i class="fas fa-lungs-virus"></i></button>
+        <button class="myBtn_multi" id="show" onclick="show5()" >Pulmonology<i class="fas fa-lungs-virus"></i></button>
 
           <!-- Trigger/Open The Modal -->
-          <button class="myBtn_multi" >Orthopedic<i class="fas fa-bone"></i></button>
+          <button class="myBtn_multi" id="show" onclick="show6()">Orthopedic<i class="fas fa-bone"></i></button>
 
         <!-- The Modal -->
-        <div class="modal modal_multi">
+        <div class="modal modal_multi" id="content1">
           <!-- Modal content -->
           <div class="modal-content">
-            <span class="close close_multi">x</span>
+            <button class="myBtn_multi" id="hide" onclick="hide1()" >Cardilogist <i class="fas fa-heartbeat"></i></button>
             <p><b>Cardiology:</b>
                         <em>Cardiology is the study of the heart. Cardiology is a branch of medicine that deals with disorders of the heart and the cardiovascular system.
                         </em></p>
@@ -99,10 +150,10 @@
 
 
                       <!-- The Modal -->
-         <div  class="modal modal_multi">
+         <div  class="modal modal_multi" id="content2">
                       <!-- Modal content -->
         <div class="modal-content">
-                     <span class="close close_multi">x</span>
+          <button class="myBtn_multi" id="hide" onclick="hide2()" >Gastroenterology</button>
                     <p><b>Gastroenterology:</b>
                    <em>The branch of medicine that deals with the diagnosis and treatment of disorders of the gastrointestinal tract and related organs.
                    </em> </p>
@@ -127,10 +178,10 @@
 
                    
    <!-- The Modal-->
-   <div  class="modal modal_multi">
+   <div  class="modal modal_multi" id="content3">
     <!-- Modal content -->
         <div class="modal-content">
-          <span class="close close_multi">x</span>
+          <button class="myBtn_multi" id="hide" onclick="hide3()" >Nephrology</button>
          <p><b>Nephrology:</b>
         <em>The branch of medicine that deals with the physiology and diseases of the kidneys.
        </em> </p>
@@ -154,10 +205,10 @@
         
 
           <!-- The Modal-->
-        <div class="modal modal_multi" >
+        <div class="modal modal_multi" id="content4" >
           <!-- Modal content -->
          <div class="modal-content">
-          <span class="close close_multi">x</span>
+          <button class="myBtn_multi" id="hide" onclick="hide4()">Psychiatry</button>
          <p><b>Psychiatry:</b>
         <em>Psychiatry is the branch of medicine focused on the diagnosis, treatment and prevention of mental, emotional and behavioral disorders.<br>
           A psychiatrist is a medical doctor (an M.D. or D.O.) who specializes in mental health, including substance use disorders. <br>
@@ -185,10 +236,10 @@
 
         
           <!-- The Modal--> 
-        <div class="modal modal_multi">
+        <div class="modal modal_multi" id="content5">
           <!-- Modal content -->
          <div class="modal-content">
-          <span class="close close_multi">x</span>
+          <button class="myBtn_multi" id="hide" onclick="hide5()" >Pulmonology<i class="fas fa-lungs-virus"></i></button>
          <p><b>Pulmonology:</b>
         <em> (PUL-muh-NAH-loh-jist) A doctor who has special training in diagnosing and treating diseases of the lungs. Also called pulmonary specialist.
        </em> </p>
@@ -213,10 +264,10 @@
         </div>
 
          <!-- The Modal-->
-         <div  class="modal modal_multi">
+         <div  class="modal modal_multi" id="content6">
           <!-- Modal content -->
         <div class="modal-content">
-          <span class="close close_multi">x</span>
+          <button class="myBtn_multi" id="hide" onclick="hide6()">Orthopedic<i class="fas fa-bone"></i></button>
          <p><b>Orthopedic:</b>
         <em>A doctor who specializes in treating ailments that concerns your bones, joints, ligaments, nerves and tendons.</em> </p>
        <table>
