--- a/Management/webpages/templates/pages/about.html
+++ b/Management/webpages/templates/pages/about.html
@@ -9,7 +9,7 @@
             <img src="{% static 'media/images/aboutus.png' %}" alt="">
         </div>
         <div class="content">
-            <h3>take the world's best quality treatment</h3>
+            <h3>Take The World's Best Quality Treatment</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ducimus, quod ex cupiditate ullam in assumenda maiores et culpa odit tempora ipsam qui, quisquam quis facere iste fuga, minus nesciunt.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus vero ipsam laborum porro voluptates voluptatibus a nihil temporibus deserunt vel?</p>
             <a href="#" class="btn"> Learn More </a>
