--- a/Management/webpages/templates/pages/services.html
+++ b/Management/webpages/templates/pages/services.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- services section starts -->
 <section class="services">
-    <h1 class="heading"> Our <span>Services</span> </h1>
+    <h1 class="heading"> our <span>services</span> </h1>
     <div class="box-container">
         <div class="box">
             <i class='fas fa-notes-medical'></i>
@@ -109,7 +109,7 @@
 <!-- services section ends -->
 <div class="ser" >       
         <!-- Trigger/Open The Modal -->
-        <button class="myBtn_multi" id="show" onclick="show1()" >Cardilogist <i class="fas fa-heartbeat"></i></button>
+        <button class="myBtn_multi" id="show" onclick="show1()" >Cardiologist <i class="fas fa-heartbeat"></i></button>
 
           <!-- Trigger/Open The Modal -->
           <button class="myBtn_multi" id="show" onclick="show2()" >Gastroenterology</button>
@@ -130,13 +130,15 @@
         <div class="modal modal_multi" id="content1">
           <!-- Modal content -->
           <div class="modal-content">
-            <button class="myBtn_multi" id="hide" onclick="hide1()" >Cardilogist <i class="fas fa-heartbeat"></i></button>
-            <p><b>Cardiology:</b>
-                        <em>Cardiology is the study of the heart. Cardiology is a branch of medicine that deals with disorders of the heart and the cardiovascular system.
+            <button class="myBtn_multii" id="hide" onclick="hide1()" >Back</button>
+
+            <button class="myBtn_multi"  >Cardilogist <i class="fas fa-heartbeat"></i></button>
+            <p><b>Cardiologist:</b>
+                        <em>Cardiologist is the study of the heart. Cardiologist is a branch of medicine that deals with disorders of the heart and the cardiovascular system.
                         </em></p>
                     <table>
                     <tr>
-                    <th>Doctors are Avaliable  for cardiology : 5 </th> <th> Active:3 (Mon-friday)</th> <th>InActive:2 (Sat-Sunday)</th></tr>
+                    <th>Doctors are Avaliable  for Cardiologist : 5 </th> <th> Active:3 (Mon-friday)</th> <th>InActive:2 (Sat-Sunday)</th></tr>
                     <tr><th> Doctors Name</th> <th> Doctors Experiences</th> <th> Doctors Timing</th></tr>
                     <tr><td> Dr.sunil's </td> <td>4</td><td>8:00-11:30 AM</td></tr>
                     <tr><td> Dr.sunil's </td><td>4</td><td>8:00-11:30 AM</td></tr>
@@ -153,7 +155,9 @@
          <div  class="modal modal_multi" id="content2">
                       <!-- Modal content -->
         <div class="modal-content">
-          <button class="myBtn_multi" id="hide" onclick="hide2()" >Gastroenterology</button>
+          <button class="myBtn_multii" id="hide" onclick="hide2()" >Back</button>
+
+          <button class="myBtn_multi"  >Gastroenterology</button>
                     <p><b>Gastroenterology:</b>
                    <em>The branch of medicine that deals with the diagnosis and treatment of disorders of the gastrointestinal tract and related organs.
                    </em> </p>
@@ -181,7 +185,9 @@
    <div  class="modal modal_multi" id="content3">
     <!-- Modal content -->
         <div class="modal-content">
-          <button class="myBtn_multi" id="hide" onclick="hide3()" >Nephrology</button>
+          <button class="myBtn_multii" id="hide" onclick="hide3()" >Back</button>
+
+          <button class="myBtn_multi">Nephrology</button>
          <p><b>Nephrology:</b>
         <em>The branch of medicine that deals with the physiology and diseases of the kidneys.
        </em> </p>
@@ -208,7 +214,10 @@
         <div class="modal modal_multi" id="content4" >
           <!-- Modal content -->
          <div class="modal-content">
-          <button class="myBtn_multi" id="hide" onclick="hide4()">Psychiatry</button>
+          <button class="myBtn_multii" id="hide" onclick="hide4()" >Back</button>
+
+          <button class="myBtn_multi">Psychiatry</button>
+         
          <p><b>Psychiatry:</b>
         <em>Psychiatry is the branch of medicine focused on the diagnosis, treatment and prevention of mental, emotional and behavioral disorders.<br>
           A psychiatrist is a medical doctor (an M.D. or D.O.) who specializes in mental health, including substance use disorders. <br>
@@ -239,7 +248,10 @@
         <div class="modal modal_multi" id="content5">
           <!-- Modal content -->
          <div class="modal-content">
-          <button class="myBtn_multi" id="hide" onclick="hide5()" >Pulmonology<i class="fas fa-lungs-virus"></i></button>
+          <button class="myBtn_multii" id="hide" onclick="hide5()" >Back</button>
+
+          <button class="myBtn_multi">Pulmonology<i class="fas fa-lungs-virus"></i></button>
+          
          <p><b>Pulmonology:</b>
         <em> (PUL-muh-NAH-loh-jist) A doctor who has special training in diagnosing and treating diseases of the lungs. Also called pulmonary specialist.
        </em> </p>
@@ -267,7 +279,10 @@
          <div  class="modal modal_multi" id="content6">
           <!-- Modal content -->
         <div class="modal-content">
-          <button class="myBtn_multi" id="hide" onclick="hide6()">Orthopedic<i class="fas fa-bone"></i></button>
+
+          <button class="myBtn_multii" id="hide" onclick="hide6()" >Back</button>
+
+          <button class="myBtn_multi" >Orthopedic<i class="fas fa-bone"></i></button>
          <p><b>Orthopedic:</b>
         <em>A doctor who specializes in treating ailments that concerns your bones, joints, ligaments, nerves and tendons.</em> </p>
        <table>
