--- a/Management/users/static/strapcss/register.css
+++ b/Management/users/static/strapcss/register.css
@@ -19,12 +19,6 @@ h2{
     position: relative;
     right:380px;
 }
-/*.heading{
-    position: relative;
-    right:348px;
-    font-size: 30px;
-    display: flex;
-}*/
 #logo {
     border-radius:50px;
     padding-left:0%;
@@ -38,6 +32,7 @@ h2{
 .nav-item2{
     color:palevioletred;
     font-size: 1.3rem;
+  
 }
 .nav-link{
     color: palevioletred;
@@ -47,6 +42,8 @@ h2{
 .nav-item2{
     position:relative;
     left:1250px;
+    display: flex;
+    margin-right: 2rem;
 }
 
 .btn{
@@ -72,118 +69,72 @@ h2{
     margin-bottom: 20px;
   }
   
-  .article-title {
-    color: #444444;
-  }
-  
-  a.article-title:hover {
-    color: #428bca;
-    text-decoration: none;
-  }
-  
-  .article-content {
-    white-space: pre-line;
-  }
-  
-  .article-metadata {
-    padding-bottom: 1px;
-    margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
-  }
-  
-  .article-metadata a:hover {
-    color: #333;
-    text-decoration: none;
-  }
-  .article-svg {
-    width: 25px;
-    height: 25px;
-    vertical-align: middle;
-  }
 
   
  /* contact.css*/
- .h3{
+.h3{
   color:palevioletred;
     font-size: 4rem;
     margin-top: 20px;
     position: absolute;
     right:0;
- }
+ } 
  .consecr{
   border:2px solid palevioletred;
-  padding:1rem 1rem;
-  margin-top: 2.5rem;
-  margin-right: 50px;
-  height: 450px;
-  width:50%;
-  position: relative;
-  left:700px;
-}
+ }
+
 p{
    padding-top:2px;;
    font-size:1.2rem;
    padding-left: 20px;
 }
+
+.cont_main{
+  height: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 60px;
+  
+}
+.container_col-6{
+  height: 460px;
+  width: 700px;
+  margin-top:1.5rem;
+  padding-top:1rem;
+  border:1px solid #DB7093;
+  background-color: whitesmoke;
+  position: relative;
+ left: 180px;
+}
 .boxape
   {
-   border:1px solid #DB7093;
-   width:300px;
+    border:1px solid #DB7093;
+   width:400px;
    background-color: whitesmoke;
-   padding:1rem 1rem;
-   margin-top: 2.5rem;
-   margin-right: 50px;
+   padding:2rem 2rem;
+   margin-top: 1.5rem;
+   margin-left: 50px;
    text-align: center;
    font-size: 1.2rem;
-   position: relative;
-  left:70px;
+   height: 460px;
+    top:2px;
   }
-  
+  .boxape i,b{
+    color: #DB7093;
+  }
   .boxape:hover{
    background-color:#db707000;
   }
-  /*
-  .box-form{
-   border:1px solid #DB7093;
-   width:500px;
-   background-color: whitesmoke;
-   padding:2rem 2rem;
-   margin-left: 700px;
-   margin-top: 3rem;
-   position: absolute;
-   top:250px;
+  .container{
+    border:2px solid palevioletred;
   }
-input[type=text],select {
-   width: 100%;
-   padding: 12px 20px;
-   margin: 8px 0;
-   border: 1px solid #DB7093;
-   border-radius: 4px;
-   box-sizing: border-box;  
- }  
- input[type=submit] {
-   width: 50%;
-   background-color: #DB7093;
-   color: white;
-   padding: 12px 20px;
-   margin: 4px 4px;
-   border: none;
-   border-radius: 4px;
-   cursor: pointer;
-   font-size: 1.4rem;
-
- }
-
- input[type=submit]:hover {
-   background-color: grey;
- }
- textarea{
-   width:455px;
-   height:50px;
-   padding:12px 20px;
-    margin:8px 0; 
-    border-radius: 4px; 
-    display:inline-block;
-    border:1px solid palevioletred;
- }
-/* contact ends */
+  .btn-sub{
+    border-color: palevioletred !important;
+    margin:1rem  18rem;
+  padding: .5rem;
+  }
+  .btn-sub:hover{
+    background-color: #DB7093;
+  }
+  
