--- a/Management/webpages/static/css/main.css
+++ b/Management/webpages/static/css/main.css
@@ -84,9 +84,9 @@
  }
 
  .right div{
-    margin-left:6px;
-    position: relative;
-    left:1260px;
+    margin-right:5px;
+   position: relative;
+    left:1265px;
     font-size: 2rem;
  }
  
@@ -116,7 +116,7 @@
     width: 50px;
     display: flex;
     transition:transform .2s;
-    margin-left:5px;
+    margin-left:8px;
     border: 2px solid white;
    }
     h2{
@@ -427,10 +427,9 @@
     line-height: 2;
  }
  /* services page */
-.ser{
+ .ser{
    height: 150px;
    width: 100%;
-   
    margin-top: 20px;
    justify-content: center;
    align-items: center;
@@ -448,6 +447,16 @@
   justify-content: center;
   border-radius: 10px;
   }
+  .myBtn_multii{
+   color:black;
+   background-color: #f5c1c3;
+   font-size: 10px;
+   border:1px solid rgb(183,209,231) ;
+   height: 20px;
+   width:10%;
+  
+   margin-left: 800px;
+   }
   .myBtn_multi:hover{
    background-color: rgb(183,209,231);
    transform: scale(1.0);
@@ -493,7 +502,6 @@
    tr:nth-child(even) {
      background-color: #dddddd;
    }
- 
 
 
  /* services section ends   */
@@ -567,27 +575,34 @@
  
  .appointment .row .image img{
     width: 50%;
+    position: relative;
+    right:70px;
+    margin-top: 1.5rem;
  }
- 
- .appointment .row .h3{
-    color:var(--black);
-    padding-bottom: 1rem;
-    font-size: 5rem;
+ .box-form{
+   margin-top: 1.2rem;
+   width: 660px;
+   height:350px;
+   border:2px solid palevioletred;
+   position:absolute;
+   right:40px;
  }
- 
  .appointment .row .box{
-    width: 100%;
-    margin:.5rem 0;
+    width: 91%;
+    margin:1.5rem 1.5rem;
     border-radius: .5rem;
     border:var(--border);
     font-size: 1.6rem;
     color: var(--black);
     text-transform: none;
-    padding: 1rem;
+    padding: 1rem 1rem;
  }
  
  .appointment .row .btn{
     padding:1rem 4rem;
+    position: relative;
+    left:40%;
+    margin-bottom: 1rem;
  }
  /* appointmenting section ends  */
  
