--- a/Management/webpages/templates/pages/index.html
+++ b/Management/webpages/templates/pages/index.html
@@ -164,18 +164,15 @@
     <h1 class="heading"> <span>Appointment</span> Now </h1>    
 
     <div class="row">
-
         <div class="image">
             <img src="{% static 'media/images/appointment.jpg' %}" alt="">
         </div>
-      <div>  
-            <h3>Make appointment</h3>
-        <form >
+      <form class="box-form">
                   <input type="text"name="name" placeholder="your name" class="box">
                   <input type="email"name="email" placeholder="your email" class="box">     
                   <input type="number"name="number" placeholder="your number" class="box">        
-                  <input type="date"name="date" class="box">                                  
-                  <input type="submit" name="submit" value="appointment now" class="btn"> 
+                  <input type="date"name="date" class="box"> <br>                                 
+                  <input type="submit" name="submit" value="Submit" class="btn"> 
      </form></div>
 </section>
 
