--- a/Management/webpages/templates/pages/base.html
+++ b/Management/webpages/templates/pages/base.html
@@ -36,7 +36,7 @@
              <li><a href="{% url 'about' %}">About Us</a></li>
              <li><a href="{% url 'services' %}">Services</a></li>
              <li><a href="{% url 'feedback' %}">Feedback</a></li>
-             <li><a href="{% url 'update' %}">Update</a></li>
+             <li><a href="{% url 'news' %}">News</a></li>
              <li><a href="{% url 'login'%}">Login </a></li> 
            </ul>
            </nav>
