--- a/Management/webpages/templates/pages/index.html
+++ b/Management/webpages/templates/pages/index.html
@@ -22,7 +22,7 @@
             <p>Maintaining good health will ultimately lead to a happy mind which is more valuable than any precious gift in today’s life. 
                 Having a healthy life must be a part of everyone’s lifestyle.
                 If one has a healthy and happy mind, then one will always stay motivated towards one’s work and will be productive at work.</p>
-            <a href="#" class="btn">Learn More </a>
+            <a href="{% url 'more' %}" class="btn">Learn More </a>
         </div>
     </section>
     <!-- home section ends -->
@@ -32,37 +32,37 @@
     <div class="cell">
         <div class="cell">
             <th>
-           <td><p class="tooltip">Doctors at work<span class="tooltiptext">Top 5 doctors in our hospital.
+           <td><p class="tooltip">Doctors at Work<span class="tooltiptext">Top 5 doctors in our hospital.
                 1. Dr. Siddhartha Mukherjee – Biologist.
                 2. Dr. Naresh Trehan – cardiothoracic surgeon.
                 3. Dr. Sudhansu Bhattacharyya – Cardiac surgeon.
                 4. Dr.  Surbhi Anand – Endodontist.
                 5. Dr. Ashish Sabharwal- Urologist.
-                <a href="#">Learn More</a></span></p></td></th>
+                <a href="{% url 'more' %}">Learn More</a></span></p></td></th>
         </div>
     
         <div class="cell">
             <th>
-           <td><p class="tooltip">Satisfied patients<span class="tooltiptext">Patients and staff satisfaction is an important component of the health care industry.About the performance of staff, appointment system,behavior of staff,support service and any other suggestions of patients.  <a href="#">Learn More</a></span></p></td></th>
+           <td><p class="tooltip">Satisfied Patients<span class="tooltiptext">Patients and staff satisfaction is an important component of the health care industry.About the performance of staff, appointment system,behavior of staff,support service and any other suggestions of patients.  <a href="#">Learn More</a></span></p></td></th>
         </div>
         <div class="cell">
             <th>
            <td>
-            <p class="tooltip">Bed facility<span class="tooltiptext"> A hospital bed specially designed for
+            <p class="tooltip">Bed Facility<span class="tooltiptext"> A hospital bed specially designed for
                 hospitalized patients or others in need of some form of health care. These beds have special features both for the 
                 comfort and well-being of the patient and for the convenience of health care workers.
-        <a href="#">Learn More</a></span></p></td></th>
+        <a href="{% url 'more' %}">Learn More</a></span></p></td></th>
         </div>
     
         <div class="cell">
             <th>
            <td>
-            <p class="tooltip">Available hospitals<span class="tooltiptext">Available hospital are   1. Apollo health city
+            <p class="tooltip">Available Hospitals<span class="tooltiptext">Available hospital are   1. Apollo health city
              2. Kims- Krishna Institute Of Medical Sciences
                 3. Sunshine hospitals
                 4. Continental hospitals
                 5. Medicover Hospitals
-                <a href="#">Learn More</a>  
+                <a href="{% url 'more' %}">Learn More</a>  
             </span></p></td></th>
         </div>
 </section>
@@ -79,7 +79,7 @@
         <div class="box">
             <img src="{% static 'media/images/doctor1.jpg' %}" alt="">
             <h3>ABC</h3>
-            <span>expert doctor</span>
+            <span>Expert Doctor</span>
             <div class="share" class="box">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -92,7 +92,7 @@
         <div class="box">
             <img src="{% static 'media/images/doctor2.jpg' %}" alt="">
             <h3>DEF</h3>
-            <span>expert doctor</span>
+            <span>Expert Doctor</span>
             <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -105,7 +105,7 @@
         <div class="box">
             <img src="{% static 'media/images/doctor3.jpg' %}" alt="">
             <h3>GHI</h3>
-            <span>expert doctor</span>
+            <span>Expert Doctor</span>
             <div class="share">
             <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
@@ -118,7 +118,7 @@
         <div class="box">
             <img src="{% static 'media/images/doctor4.jpg' %}" alt="">
             <h3>JKL</h3>
-            <span>expert doctor</span>
+            <span>Expert Doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -131,7 +131,7 @@
         <div class="box">
             <img src="{% static 'media/images/doctor5.jpg' %}" alt="">
             <h3>MNO</h3>
-            <span>expert doctor</span>
+            <span>Expert Doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -143,7 +143,7 @@
         <div class="box">
             <img src="{% static 'media/images/doctor5.jpg' %}" alt="">
             <h3>PQR</h3>
-            <span>expert doctor</span>
+            <span>Expert Doctor</span>
             <div class="share">
                 <a href="#" class="fab fa-facebook-f"></a>
                     <a href="#" class="fab fa-twitter"></a>
@@ -167,11 +167,12 @@
         <div class="image">
             <img src="{% static 'media/images/appointment.jpg' %}" alt="">
         </div>
-      <form class="box-form">
-                  <input type="text"name="name" placeholder="your name" class="box">
-                  <input type="email"name="email" placeholder="your email" class="box">     
-                  <input type="number"name="number" placeholder="your number" class="box">        
-                  <input type="date"name="date" class="box"> <br>                                 
+      <form  method="post" class="box-form">
+        {% csrf_token %}
+                  <input type="text"name="name" placeholder="your name" class="box" required>
+                  <input type="email"name="email" placeholder="your email" class="box" required>     
+                  <input type="number"name="number" placeholder="your number" class="box" required>             
+                  <textarea placeholder="Appointment purpose" name="message" class="box" required></textarea> <br>                     
                   <input type="submit" name="submit" value="Submit" class="btn"> 
      </form></div>
 </section>
@@ -250,37 +251,37 @@
         <div class="box">
             <h3>Quick Links</h3>
             <a href="#home"> <i class="fas fa-chevron-right"></i> Home </a>
-            <a href="#about"> <i class="fas fa-chevron-right"></i> About </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> Services </a>
+            <a href="{% url 'about' %} "> <i class="fas fa-chevron-right"></i> About </a>
+            <a href="{% url 'services' %}"> <i class="fas fa-chevron-right"></i> Services </a>
             <a href="#doctors"> <i class="fas fa-chevron-right"></i> Doctors </a>
             <a href="#appointment"> <i class="fas fa-chevron-right"></i> Appointment </a>
             <a href="#review"> <i class="fas fa-chevron-right"></i> Review </a>
-            <a href="contact.html"> <i class="fas fa-chevron-right"></i>VContact us </a>
+            <a href="{% url 'news' %}"> <i class="fas fa-chevron-right"></i>News </a>
         </div>
 
         <div class="box">
             <h3>Our Services</h3>
-            <a href="#"> <i class="fas fa-chevron-right"></i> dental care </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> message therapy </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> cardioloty </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> diagnosis </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> ambulance service </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Medical services </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Free checkups </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Experted Doctors </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Laboratory </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Ambulance service </a>
         </div>
 
         <div class="box">
             <h3>Appointment Info</h3>
-            <a href="#"> <i class="fas fa-phone-square-alt"></i> +8801688238801 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> mounika29@gmail.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> hyderabad </a>
+            <a href="#"> <i class="fas fa-phone-square-alt"></i>+91 8963674234 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> Hospital@gmail.com </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> Hyderabad </a>
         </div>
 
         <div class="box">
             <h3>Follow Us</h3>
-            <a href="#"> <i class="fab fa-facebook"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
-            <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
+            <a href="#"> <i class="fab fa-facebook"></i> Facebook </a>
+            <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
+            <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
+            <a href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
+            <a href="#"> <i class="fab fa-pinterest"></i> Pinterest </a>
         </div>
 
     </div>
