--- a/Management/webpages/templates/pages/base.html
+++ b/Management/webpages/templates/pages/base.html
@@ -30,6 +30,7 @@
          <ol class="flex">
            <li><img src="{% static 'media/images/heart.png' %} " id="logo" alt="heart.png"></li>
            <li><h2>SURE Trust</h2></li>
+           <li> <h3 style=" text-align: center; color: var(--PVR) !important;font-size:30px; position: absolute ;right:40%;">Hospital Management System</h3></li>
          </ol>
          <ul class="flex">
              <li><a href="{% url 'index' %}">Home </a></li>
