--- a/Management/webpages/templates/pages/index.html
+++ b/Management/webpages/templates/pages/index.html
@@ -22,7 +22,7 @@
             <p>Maintaining good health will ultimately lead to a happy mind which is more valuable than any precious gift in today’s life. 
                 Having a healthy life must be a part of everyone’s lifestyle.
                 If one has a healthy and happy mind, then one will always stay motivated towards one’s work and will be productive at work.</p>
-            <a href="{% url 'more' %}" class="btn">Learn More </a>
+            <a href="{% url 'more' %}" class="btn" id="Healthy">Learn More </a>
         </div>
     </section>
     <!-- home section ends -->
@@ -38,12 +38,13 @@
                 3. Dr. Sudhansu Bhattacharyya – Cardiac surgeon.
                 4. Dr.  Surbhi Anand – Endodontist.
                 5. Dr. Ashish Sabharwal- Urologist.
-                <a href="{% url 'more' %}">Learn More</a></span></p></td></th>
+                <a href="{% url 'more' %}" id="work">Learn More</a></span></p></td></th>
         </div>
     
         <div class="cell">
             <th>
-           <td><p class="tooltip">Satisfied Patients<span class="tooltiptext">Patients and staff satisfaction is an important component of the health care industry.About the performance of staff, appointment system,behavior of staff,support service and any other suggestions of patients.  <a href="#">Learn More</a></span></p></td></th>
+           <td><p class="tooltip">Satisfied Patients<span class="tooltiptext">Patients and staff satisfaction is an important component of the health care industry.About the performance of staff, appointment system,behavior of staff,support service and any other suggestions of patients. 
+             <a href="{% url 'more' %}" id="Patients">Learn More</a></span></p></td></th>
         </div>
         <div class="cell">
             <th>
@@ -51,7 +52,7 @@
             <p class="tooltip">Bed Facility<span class="tooltiptext"> A hospital bed specially designed for
                 hospitalized patients or others in need of some form of health care. These beds have special features both for the 
                 comfort and well-being of the patient and for the convenience of health care workers.
-        <a href="{% url 'more' %}">Learn More</a></span></p></td></th>
+        <a href="{% url 'more' %}" id="Bed">Learn More</a></span></p></td></th>
         </div>
     
         <div class="cell">
@@ -62,7 +63,7 @@
                 3. Sunshine hospitals
                 4. Continental hospitals
                 5. Medicover Hospitals
-                <a href="{% url 'more' %}">Learn More</a>  
+                <a href="{% url 'more' %}" id="Available">Learn More</a>  
             </span></p></td></th>
         </div>
 </section>
