--- a/Management/webpages/templates/pages/services.html
+++ b/Management/webpages/templates/pages/services.html
@@ -8,49 +8,49 @@
             <i class='fas fa-notes-medical'></i>
             <h3>Free Checkups</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More </a>
+            <a href="{% url 'more' %}"  class="btn" id="Free" > Learn More </a>
         </div>
         <div class="box">
             <i class='fas fa-ambulance'></i>
             <h3>24/7 Ambulance</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More</a>
+            <a href="{% url 'more' %}"  class="btn" id="Ambulance"> Learn More</a>
         </div>
         <div class="box">
             <i class='fas fa-user-md'></i>
             <h3>Expert Doctors</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More </a>
+            <a href="{% url 'more' %}"  class="btn" id="Expert"> Learn More </a>
         </div>
         <div class="box">
             <i class='fas fa-capsules'></i>
             <h3>Medicines</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More </a>
+            <a href="{% url 'more' %}"  class="btn" id="Medicines"> Learn More </a>
         </div>
         <div class="box">
             <i class='fas fa-bed'></i> 
             <h3>Bed Facility</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More </a>
+            <a href="{% url 'more' %}"  class="btn" id="Facility"> Learn More </a>
         </div>
         <div class="box">
             <i class='fas fa-bell'></i> 
             <h3>Emergency Room</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More  </a>
+            <a href="{% url 'more' %}"  class="btn" id="Room"> Learn More  </a>
         </div> 
         <div class="box">
             <i class='fas fa-flask'></i>
             <h3>Laboratory</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More </a>
+            <a href="{% url 'more' %}"  class="btn" id="Laboratory"> Learn More </a>
         </div>
         <div class="box">
             <i class='fas fa-syringe'></i>
             <h3 >Vaccination</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.</p>
-            <a href="{% url 'more' %}" class="btn"> Learn More </a>
+            <a href="{% url 'more' %}"  class="btn" id="Vaccination"> Learn More </a>
         </div>
     </div>
 </section>
