--- a/Management/users/templates/users/base2.html
+++ b/Management/users/templates/users/base2.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
  <body>
- <nav class="navbar navbar-expand justify-content-between navbar1-custom">
+ <nav class="navbar navbar-expand justify-content-between navbar1-custom" class="flex">
      <ul class="navbar-nav" class=" justify-content-center">
      <li class="nav-item2">
       <i class="fab fa-facebook-f"></i>
@@ -29,12 +29,12 @@
       <li class="nav-item3">
        <a class="nav-link"href="{% url 'contact' %}" class="btn-info">Contact Us</a>
      </li></ul></nav>
- <nav class="navbar navbar-expand  justify-content-between navbar-custom">
+ <nav class="navbar navbar-expand  justify-content-between navbar-custom" class="flex">
   <ul class=" navbar-nav"> 
     <li><img src="{% static 'media/images/heart.png' %}" id="logo" alt="heart.png" ></li></ul>
     <ul class="navbar-nav"class="justify-content-center">
-    <li><h2 class="font-weight-bold heading">SURE Trust</h2></li>
-  
+    <li><h2 class="font-weight-bold heading" style=" color:palevioletred; position: relative; right:203px; padding-top: 1.5rem;">SURE Trust</h2></li>
+    <li><h3 class="font-weight-bold heading" style="color: palevioletred !important; padding-top:3rem;">Hospital Management System </h3></li>
   </ul>
    <ul class="navbar-nav" class="justify-content-end-flex">
      <li class="nav-item">
