--- a/Management/users/templates/users/login.html
+++ b/Management/users/templates/users/login.html
@@ -12,9 +12,9 @@
        </div>
    </form>
    <div class="border-top pt-3">
-       <small class="text-muted">
-           Now  create signup? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-       </small>
+       <div >
+           Now  create signup? <a class="ml-2" href="{% url 'register' %}">Sign Up </a>
+       </div>
    </div>
 </div>
    {% endblock content %}
