--- a/Management/users/templates/users/register.html
+++ b/Management/users/templates/users/register.html
@@ -2,7 +2,6 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section">  
-  <h2> Sign up</h2>
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
@@ -11,9 +10,9 @@
     <button  class=btn , type="submit">Sign Up </button>
   </form>
    <div class="border-top pt-3">
-    <small class="text-muted">
+    <div >
       Already have an account? <a class="ml-2" href="{% url 'login' %}">Login </a>
-    </small>
+    </div>
    </div>
   <div>
    {% endblock content %}
